--- a/.eslintrc
+++ b/.eslintrc
@@ -4,9 +4,11 @@
     "plugin:import/errors",
     "plugin:import/warnings"
   ],
+  "parser": "babel-eslint",
   "parserOptions": {
     "ecmaVersion": 6,
-    "sourceType": "module"
+    "sourceType": "module",
+    "allowImportExportEverywhere": true
   },
   "env": {
     "es6": true,
