--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Joshua Biddick",
   "license": "MIT",
   "dependencies": {
+    "babel-eslint": "^8.0.1",
     "bootstrap": "4.0.0-beta",
     "jquery": "^3.2.1",
     "popper.js": "^1.12.5"
